# slepianfocusing

./: .gitlint  LICENSE  README.md  pyproject.toml  shell.nix
examples/: README.md  forward.py  inverse.py
src/slepianfocusing/: assoc_legendre.py  coord_transforms.py  focal_field_czt.py  focal_field_direct_int.py  incident_beams.py  integrators.py  lenses.py  math_ext.py  numba_dummy.py  quadrature.py  sheppard_torok.py  sph_bessel.py  sphcap_conc_problems.py  unit_vectors.py  vector_multipole_fields.py  vector_spherical_harmonics.py
tests/: assoc_legendre_test.py  coord_transforms_test.py  lenses_test.py  math_ext_test.py  quadrature_test.py  sheppard_torok_test.py  sph_bessel_test.py  sphcap_conc_problems_test.py  vector_multipole_fields_test.py  vector_spherical_harmonics_test.py
